--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,9 @@ img {
     transform-origin: 70% 70%;
     display: inline-block;
 }
+.wave:hover {
+    font-size: 120px;
+}
 
 @keyframes wave-animation {
     0% {
@@ -351,9 +354,9 @@ img {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-top: 4px;
     cursor: pointer;
-    border-radius: 0.5rem;
+    border-radius: 10px;
 }
 .button:hover {
     background-color: var(--first-color);
@@ -422,6 +425,8 @@ img {
     background-color: #222;
     background-blend-mode: hard-light;
     transition: all 0.75s ease-in-out;
+    border: 4px solid var(--first-color);
+    border-radius: 6px;
 }
 
 .box:hover {
@@ -460,18 +465,17 @@ img {
     height: 100%;
     justify-content: space-around;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 .social-icon {
-    margin: 2px;
-    width: 36px;
+    padding: 2px;
+    width: 38px;
     cursor: pointer;
 }
 
 .social-icon:hover {
-    margin: 0px;
-    width: 38px;
+    padding: 0px;
 }
 .connect-whatsapp {
     justify-content: center;
@@ -537,6 +541,9 @@ img {
     }
     .wave {
         font-size: 60px;
+    }
+    .wave:hover {
+        font-size: 70px;
     }
     .projects-img {
         height: auto;
