Modified responsiveness of Projects section

--- a/styles.css
+++ b/styles.css
@@ -608,7 +608,9 @@ img {
     }
 
     .projects-img {
+        width: 100%;
         height: auto;
+        object-fit: cover;
     }
 
     .projects-about p {
